--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "preview": "vite preview",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
+    "test:unit": "node --test tests/unit/*.test.mjs",
+    "perf:check": "node scripts/check-image-sizes.mjs",
     "predev": "node scripts/generate-public-pages.mjs",
     "prebuild": "node scripts/generate-public-pages.mjs",
     "spec:validate": "node scripts/validate-v11-spec.mjs",
     "spec:parity": "node scripts/parity-sweep.mjs",
-    "spec:check": "npm run spec:validate && npm run spec:parity"
+    "spec:check": "npm run spec:validate && npm run spec:parity",
+    "integrity:scan": "node scripts/run-integrity-scan.mjs",
+    "ai:index": "node scripts/run-ai-index.mjs",
+    "seed:dev": "node scripts/seed-dev-data.mjs",
+    "playwright:state": "node scripts/create-playwright-state.mjs"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -48,8 +54,8 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.17.10",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.1",
     "@tanstack/react-query": "^5.90.16",
@@ -68,15 +74,12 @@
     "moment": "^2.30.1",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
-    "react": "^19.2.3",
+    "react": "^18.3.1",
     "react-day-picker": "^9.13.0",
-    "react-dom": "^19.2.3",
-    "react-helmet-async": "^2.0.5",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.0",
     "react-hot-toast": "^2.6.0",
-    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
-    "react-quill": "^2.0.0",
     "react-resizable-panels": "^4.3.3",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
@@ -92,8 +95,8 @@
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.6",
-    "@types/react": "^19.2.8",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
     "baseline-browser-mapping": "^2.9.14",
