--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "preview": "vite preview",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:unit": "node --test tests/unit/*.test.mjs",
+    "test:unit": "c8 node --test tests/unit/*.test.mjs",
+    "test:coverage": "c8 report --reporter=text-lcov",
     "perf:check": "node scripts/check-image-sizes.mjs",
     "predev": "node scripts/generate-public-pages.mjs",
     "prebuild": "node scripts/generate-public-pages.mjs",
@@ -101,6 +102,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
     "baseline-browser-mapping": "^2.9.14",
+    "c8": "^10.1.3",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
